function(tiny_test source)
    get_filename_component(name ${source} NAME_WE)
    add_executable("tiny_${name}" ${source})
    target_include_directories("tiny_${name}" PRIVATE ../tiny/include)
    target_include_directories("tiny_${name}" PRIVATE ../tiny/src)
endfunction()

tiny_test(src/test_map.c)
tiny_test(src/test_stringpool.c)
tiny_test(src/test_lexer.c)
tiny_test(src/test_parser.c)
